c_translator/src/maths_parser.output
Terminals unused in grammar

   RIGHT_OP
   LEFT_OP
   PTR_OP
   DOT
   EXCLANATION
   CONST
   SIGNED
   UNSIGNED
   VOID


State 206 conflicts: 1 shift/reduce


Grammar

    0 $accept: PROGRAM $end

    1 PROGRAM: TRANSLATION_UNIT

    2 TRANSLATION_UNIT: EXTERNAL_DECLARATION

    3 EXTERNAL_DECLARATION: FUNCTION_DEFINITION
    4                     | EXTERNAL_DECLARATION FUNCTION_DEFINITION
    5                     | DECLARATION
    6                     | EXTERNAL_DECLARATION DECLARATION

    7 FUNCTION_DEFINITION: DECLARATION_SPECIFIERS T_VARIABLE T_LBRACKET T_RBRACKET COMPOUND_STATEMENT
    8                    | DECLARATION_SPECIFIERS T_VARIABLE T_LBRACKET PARAMETERS_LIST T_RBRACKET COMPOUND_STATEMENT
    9                    | DECLARATION_SPECIFIERS T_VARIABLE T_LBRACKET T_RBRACKET SEMICOLUMN
   10                    | DECLARATION_SPECIFIERS T_VARIABLE T_LBRACKET PARAMETERS_LIST T_RBRACKET SEMICOLUMN

   11 PARAMETERS_LIST: PARAMETERS
   12                | PARAMETERS_LIST COMMA PARAMETERS

   13 PARAMETERS: SPECIFIER_QUANTIFIER_LIST T_VARIABLE
   14           | SPECIFIER_QUANTIFIER_LIST T_TIMES T_VARIABLE

   15 SPECIFIER_QUANTIFIER_LIST: TYPE_SPECIFIER SPECIFIER_QUANTIFIER_LIST
   16                          | TYPE_SPECIFIER

   17 STATEMENT_LIST: STATEMENT
   18               | STATEMENT_LIST STATEMENT

   19 STATEMENT: JUMP_STATEMENT
   20          | COMPOUND_STATEMENT
   21          | SELECTION_STATEMENT
   22          | ITERATION_STATEMENT
   23          | EXPRESSION_STATEMENT

   24 EXPRESSION_STATEMENT: SEMICOLUMN
   25                     | EXPRESSION SEMICOLUMN

   26 ITERATION_STATEMENT: WHILE T_LBRACKET EXPRESSION T_RBRACKET STATEMENT
   27                    | DO STATEMENT WHILE T_LBRACKET EXPRESSION T_RBRACKET SEMICOLUMN
   28                    | FOR T_LBRACKET EXPRESSION_STATEMENT EXPRESSION_STATEMENT T_RBRACKET STATEMENT
   29                    | FOR T_LBRACKET EXPRESSION_STATEMENT EXPRESSION_STATEMENT EXPRESSION T_RBRACKET STATEMENT

   30 SELECTION_STATEMENT: IF T_LBRACKET EXPRESSION T_RBRACKET STATEMENT
   31                    | IF T_LBRACKET EXPRESSION T_RBRACKET STATEMENT ELSE STATEMENT

   32 COMPOUND_STATEMENT: LARGE_RBRACKET LARGE_MBRACKET
   33                   | LARGE_RBRACKET STATEMENT_LIST LARGE_MBRACKET
   34                   | LARGE_RBRACKET DECLARATION_LIST LARGE_MBRACKET
   35                   | LARGE_RBRACKET DECLARATION_LIST STATEMENT_LIST LARGE_MBRACKET

   36 DECLARATION_LIST: DECLARATION
   37                 | DECLARATION_LIST DECLARATION

   38 DECLARATION: DECLARATION_SPECIFIERS SEMICOLUMN
   39            | DECLARATION_SPECIFIERS INIT_DECLARATOR_LIST SEMICOLUMN

   40 INIT_DECLARATOR_LIST: INIT_DECLARATOR
   41                     | INIT_DECLARATOR_LIST COMMA INIT_DECLARATOR

   42 INIT_DECLARATOR: DECLARATOR
   43                | DECLARATOR EQUAL INITIALIZER

   44 INITIALIZER: ASSIGNMENT_EXPRESSION
   45            | LARGE_RBRACKET INITIALIZER_LIST LARGE_MBRACKET
   46            | LARGE_RBRACKET INITIALIZER_LIST COMMA LARGE_MBRACKET

   47 DECLARATOR: T_TIMES DIRECT_DECLARATOR
   48           | DIRECT_DECLARATOR MIDDLE_RBRACKET T_NUMBER MIDDLE_LBRACKET
   49           | DIRECT_DECLARATOR

   50 DIRECT_DECLARATOR: T_VARIABLE
   51                  | T_LBRACKET DECLARATOR T_RBRACKET
   52                  | DIRECT_DECLARATOR MIDDLE_LBRACKET MIDDLE_RBRACKET
   53                  | DIRECT_DECLARATOR MIDDLE_LBRACKET T_NUMBER MIDDLE_RBRACKET

   54 INITIALIZER_LIST: INITIALIZER
   55                 | INITIALIZER_LIST COMMA INITIALIZER

   56 JUMP_STATEMENT: RETURN SEMICOLUMN
   57               | RETURN EXPRESSION SEMICOLUMN

   58 DECLARATION_SPECIFIERS: TYPE_SPECIFIER
   59                       | TYPE_SPECIFIER DECLARATION_SPECIFIERS

   60 TYPE_SPECIFIER: INT
   61               | DOUBLE
   62               | SHORT
   63               | LONG
   64               | FLOAT

   65 EXPRESSION: ASSIGNMENT_EXPRESSION
   66           | EXPRESSION COMMA ASSIGNMENT_EXPRESSION

   67 ASSIGNMENT_EXPRESSION: CONDITIONAL_EXPRESSION
   68                      | POSTFIX_EXPRESSION ASSIGNMENT_OPERATOR ASSIGNMENT_EXPRESSION

   69 ASSIGNMENT_OPERATOR: EQUAL
   70                    | ADD_ASSIGN
   71                    | SUB_ASSIGN
   72                    | MUL_ASSIGN
   73                    | DIV_ASSIGN
   74                    | MOD_ASSIGN
   75                    | LEFT_ASSIGN
   76                    | RIGHT_ASSIGN
   77                    | AND_ASSIGN
   78                    | XOR_ASSIGN
   79                    | OR_ASSIGN

   80 CONDITIONAL_EXPRESSION: LOGICAL_OR_EXPRESSION
   81                       | LOGICAL_OR_EXPRESSION QUESTION EXPRESSION COLON CONDITIONAL_EXPRESSION

   82 LOGICAL_OR_EXPRESSION: LOGICAL_AND_EXPRESSION
   83                      | LOGICAL_OR_EXPRESSION OR_OP LOGICAL_AND_EXPRESSION

   84 LOGICAL_AND_EXPRESSION: BINARY_INCLUSIVE_OR_EXPRESSION
   85                       | LOGICAL_AND_EXPRESSION AND_OP BINARY_INCLUSIVE_OR_EXPRESSION

   86 EQUALITY_EXPRESSION: RELATIONAL_EXPRESSION
   87                    | EQUALITY_EXPRESSION EQ_OP RELATIONAL_EXPRESSION
   88                    | EQUALITY_EXPRESSION NE_OP RELATIONAL_EXPRESSION

   89 BINARY_AND_EXPRESSION: EQUALITY_EXPRESSION
   90                      | BINARY_AND_EXPRESSION AND EQUALITY_EXPRESSION

   91 BINARY_EXCLUSIVE_OR_EXPRESSION: BINARY_AND_EXPRESSION
   92                               | BINARY_EXCLUSIVE_OR_EXPRESSION T_XOR BINARY_AND_EXPRESSION

   93 BINARY_INCLUSIVE_OR_EXPRESSION: BINARY_EXCLUSIVE_OR_EXPRESSION
   94                               | BINARY_INCLUSIVE_OR_EXPRESSION OR BINARY_EXCLUSIVE_OR_EXPRESSION

   95 RELATIONAL_EXPRESSION: ADDITIVE_EXPRESSION
   96                      | RELATIONAL_EXPRESSION SMALLER ADDITIVE_EXPRESSION
   97                      | RELATIONAL_EXPRESSION LARGER ADDITIVE_EXPRESSION
   98                      | RELATIONAL_EXPRESSION LE_OP ADDITIVE_EXPRESSION
   99                      | RELATIONAL_EXPRESSION GE_OP ADDITIVE_EXPRESSION

  100 ADDITIVE_EXPRESSION: MULTIPLICATIVE_EXPRESSION
  101                    | ADDITIVE_EXPRESSION T_PLUS MULTIPLICATIVE_EXPRESSION
  102                    | ADDITIVE_EXPRESSION T_MINUS MULTIPLICATIVE_EXPRESSION

  103 MULTIPLICATIVE_EXPRESSION: CAST_EXPRESSION
  104                          | MULTIPLICATIVE_EXPRESSION T_TIMES CAST_EXPRESSION
  105                          | MULTIPLICATIVE_EXPRESSION T_DIVIDE CAST_EXPRESSION
  106                          | MULTIPLICATIVE_EXPRESSION PERCENTAGE CAST_EXPRESSION

  107 CAST_EXPRESSION: T_LBRACKET TYPE_SPECIFIER T_RBRACKET CAST_EXPRESSION
  108                | UNARY_EXPRESSION

  109 UNARY_EXPRESSION: POSTFIX_EXPRESSION
  110                 | INC_OP UNARY_EXPRESSION
  111                 | DEC_OP UNARY_EXPRESSION
  112                 | UNARY_OPERATOR CAST_EXPRESSION

  113 UNARY_OPERATOR: T_MINUS
  114               | T_PLUS

  115 POSTFIX_EXPRESSION: PRIMARY_EXPRESSION
  116                   | POSTFIX_EXPRESSION T_LBRACKET T_RBRACKET
  117                   | POSTFIX_EXPRESSION T_LBRACKET ARGUMENT_EXPRESSION_LIST T_RBRACKET
  118                   | POSTFIX_EXPRESSION MIDDLE_LBRACKET EXPRESSION MIDDLE_RBRACKET
  119                   | POSTFIX_EXPRESSION INC_OP
  120                   | POSTFIX_EXPRESSION DEC_OP

  121 ARGUMENT_EXPRESSION_LIST: ASSIGNMENT_EXPRESSION
  122                         | ARGUMENT_EXPRESSION_LIST COMMA ASSIGNMENT_EXPRESSION

  123 PRIMARY_EXPRESSION: T_NUMBER
  124                   | T_VARIABLE
  125                   | T_LBRACKET EXPRESSION T_RBRACKET


Terminals, with rules where they appear

$end (0) 0
error (256)
T_TIMES (258) 14 47 104
T_DIVIDE (259) 105
T_PLUS (260) 101 114
T_MINUS (261) 102 113
T_XOR (262) 92
T_LBRACKET (263) 7 8 9 10 26 27 28 29 30 31 51 107 116 117 125
T_RBRACKET (264) 7 8 9 10 26 27 28 29 30 31 51 107 116 117 125
T_NUMBER (265) 48 53 123
T_VARIABLE (266) 7 8 9 10 13 14 50 124
RIGHT_OP (267)
LEFT_OP (268)
INC_OP (269) 110 119
DEC_OP (270) 111 120
PTR_OP (271)
AND_OP (272) 85
OR_OP (273) 83
LE_OP (274) 98
GE_OP (275) 99
EQ_OP (276) 87
NE_OP (277) 88
SEMICOLUMN (278) 9 10 24 25 27 38 39 56 57
LARGE_RBRACKET (279) 32 33 34 35 45 46
LARGE_MBRACKET (280) 32 33 34 35 45 46
COMMA (281) 12 41 46 55 66 122
COLON (282) 81
EQUAL (283) 43 69
ADD_ASSIGN (284) 70
SUB_ASSIGN (285) 71
MUL_ASSIGN (286) 72
DIV_ASSIGN (287) 73
MOD_ASSIGN (288) 74
LEFT_ASSIGN (289) 75
RIGHT_ASSIGN (290) 76
AND_ASSIGN (291) 77
XOR_ASSIGN (292) 78
OR_ASSIGN (293) 79
MIDDLE_RBRACKET (294) 48 52 53 118
MIDDLE_LBRACKET (295) 48 52 53 118
DOT (296)
AND (297) 90
EXCLANATION (298)
PERCENTAGE (299) 106
SMALLER (300) 96
LARGER (301) 97
OR (302) 94
QUESTION (303) 81
DO (304) 27
CONST (305)
ELSE (306) 31
FOR (307) 28 29
IF (308) 30 31
INT (309) 60
DOUBLE (310) 61
LONG (311) 63
RETURN (312) 56 57
SHORT (313) 62
SIGNED (314)
UNSIGNED (315)
VOID (316)
WHILE (317) 26 27
FLOAT (318) 64


Nonterminals, with rules where they appear

$accept (64)
    on left: 0
PROGRAM (65)
    on left: 1, on right: 0
TRANSLATION_UNIT (66)
    on left: 2, on right: 1
EXTERNAL_DECLARATION (67)
    on left: 3 4 5 6, on right: 2 4 6
FUNCTION_DEFINITION (68)
    on left: 7 8 9 10, on right: 3 4
PARAMETERS_LIST (69)
    on left: 11 12, on right: 8 10 12
PARAMETERS (70)
    on left: 13 14, on right: 11 12
SPECIFIER_QUANTIFIER_LIST (71)
    on left: 15 16, on right: 13 14 15
STATEMENT_LIST (72)
    on left: 17 18, on right: 18 33 35
STATEMENT (73)
    on left: 19 20 21 22 23, on right: 17 18 26 27 28 29 30 31
EXPRESSION_STATEMENT (74)
    on left: 24 25, on right: 23 28 29
ITERATION_STATEMENT (75)
    on left: 26 27 28 29, on right: 22
SELECTION_STATEMENT (76)
    on left: 30 31, on right: 21
COMPOUND_STATEMENT (77)
    on left: 32 33 34 35, on right: 7 8 20
DECLARATION_LIST (78)
    on left: 36 37, on right: 34 35 37
DECLARATION (79)
    on left: 38 39, on right: 5 6 36 37
INIT_DECLARATOR_LIST (80)
    on left: 40 41, on right: 39 41
INIT_DECLARATOR (81)
    on left: 42 43, on right: 40 41
INITIALIZER (82)
    on left: 44 45 46, on right: 43 54 55
DECLARATOR (83)
    on left: 47 48 49, on right: 42 43 51
DIRECT_DECLARATOR (84)
    on left: 50 51 52 53, on right: 47 48 49 52 53
INITIALIZER_LIST (85)
    on left: 54 55, on right: 45 46 55
JUMP_STATEMENT (86)
    on left: 56 57, on right: 19
DECLARATION_SPECIFIERS (87)
    on left: 58 59, on right: 7 8 9 10 38 39 59
TYPE_SPECIFIER (88)
    on left: 60 61 62 63 64, on right: 15 16 58 59 107
EXPRESSION (89)
    on left: 65 66, on right: 25 26 27 29 30 31 57 66 81 118 125
ASSIGNMENT_EXPRESSION (90)
    on left: 67 68, on right: 44 65 66 68 121 122
ASSIGNMENT_OPERATOR (91)
    on left: 69 70 71 72 73 74 75 76 77 78 79, on right: 68
CONDITIONAL_EXPRESSION (92)
    on left: 80 81, on right: 67 81
LOGICAL_OR_EXPRESSION (93)
    on left: 82 83, on right: 80 81 83
LOGICAL_AND_EXPRESSION (94)
    on left: 84 85, on right: 82 83 85
EQUALITY_EXPRESSION (95)
    on left: 86 87 88, on right: 87 88 89 90
BINARY_AND_EXPRESSION (96)
    on left: 89 90, on right: 90 91 92
BINARY_EXCLUSIVE_OR_EXPRESSION (97)
    on left: 91 92, on right: 92 93 94
BINARY_INCLUSIVE_OR_EXPRESSION (98)
    on left: 93 94, on right: 84 85 94
RELATIONAL_EXPRESSION (99)
    on left: 95 96 97 98 99, on right: 86 87 88 96 97 98 99
ADDITIVE_EXPRESSION (100)
    on left: 100 101 102, on right: 95 96 97 98 99 101 102
MULTIPLICATIVE_EXPRESSION (101)
    on left: 103 104 105 106, on right: 100 101 102 104 105 106
CAST_EXPRESSION (102)
    on left: 107 108, on right: 103 104 105 106 107 112
UNARY_EXPRESSION (103)
    on left: 109 110 111 112, on right: 108 110 111
UNARY_OPERATOR (104)
    on left: 113 114, on right: 112
POSTFIX_EXPRESSION (105)
    on left: 115 116 117 118 119 120, on right: 68 109 116 117 118
    119 120
ARGUMENT_EXPRESSION_LIST (106)
    on left: 121 122, on right: 117 122
PRIMARY_EXPRESSION (107)
    on left: 123 124 125, on right: 115


State 0

    0 $accept: . PROGRAM $end

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 2
    LONG    shift, and go to state 3
    SHORT   shift, and go to state 4
    FLOAT   shift, and go to state 5

    PROGRAM                 go to state 6
    TRANSLATION_UNIT        go to state 7
    EXTERNAL_DECLARATION    go to state 8
    FUNCTION_DEFINITION     go to state 9
    DECLARATION             go to state 10
    DECLARATION_SPECIFIERS  go to state 11
    TYPE_SPECIFIER          go to state 12


State 1

   60 TYPE_SPECIFIER: INT .

    $default  reduce using rule 60 (TYPE_SPECIFIER)


State 2

   61 TYPE_SPECIFIER: DOUBLE .

    $default  reduce using rule 61 (TYPE_SPECIFIER)


State 3

   63 TYPE_SPECIFIER: LONG .

    $default  reduce using rule 63 (TYPE_SPECIFIER)


State 4

   62 TYPE_SPECIFIER: SHORT .

    $default  reduce using rule 62 (TYPE_SPECIFIER)


State 5

   64 TYPE_SPECIFIER: FLOAT .

    $default  reduce using rule 64 (TYPE_SPECIFIER)


State 6

    0 $accept: PROGRAM . $end

    $end  shift, and go to state 13


State 7

    1 PROGRAM: TRANSLATION_UNIT .

    $default  reduce using rule 1 (PROGRAM)


State 8

    2 TRANSLATION_UNIT: EXTERNAL_DECLARATION .
    4 EXTERNAL_DECLARATION: EXTERNAL_DECLARATION . FUNCTION_DEFINITION
    6                     | EXTERNAL_DECLARATION . DECLARATION

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 2
    LONG    shift, and go to state 3
    SHORT   shift, and go to state 4
    FLOAT   shift, and go to state 5

    $default  reduce using rule 2 (TRANSLATION_UNIT)

    FUNCTION_DEFINITION     go to state 14
    DECLARATION             go to state 15
    DECLARATION_SPECIFIERS  go to state 11
    TYPE_SPECIFIER          go to state 12


State 9

    3 EXTERNAL_DECLARATION: FUNCTION_DEFINITION .

    $default  reduce using rule 3 (EXTERNAL_DECLARATION)


State 10

    5 EXTERNAL_DECLARATION: DECLARATION .

    $default  reduce using rule 5 (EXTERNAL_DECLARATION)


State 11

    7 FUNCTION_DEFINITION: DECLARATION_SPECIFIERS . T_VARIABLE T_LBRACKET T_RBRACKET COMPOUND_STATEMENT
    8                    | DECLARATION_SPECIFIERS . T_VARIABLE T_LBRACKET PARAMETERS_LIST T_RBRACKET COMPOUND_STATEMENT
    9                    | DECLARATION_SPECIFIERS . T_VARIABLE T_LBRACKET T_RBRACKET SEMICOLUMN
   10                    | DECLARATION_SPECIFIERS . T_VARIABLE T_LBRACKET PARAMETERS_LIST T_RBRACKET SEMICOLUMN
   38 DECLARATION: DECLARATION_SPECIFIERS . SEMICOLUMN
   39            | DECLARATION_SPECIFIERS . INIT_DECLARATOR_LIST SEMICOLUMN

    T_TIMES     shift, and go to state 16
    T_LBRACKET  shift, and go to state 17
    T_VARIABLE  shift, and go to state 18
    SEMICOLUMN  shift, and go to state 19

    INIT_DECLARATOR_LIST  go to state 20
    INIT_DECLARATOR       go to state 21
    DECLARATOR            go to state 22
    DIRECT_DECLARATOR     go to state 23


State 12

   58 DECLARATION_SPECIFIERS: TYPE_SPECIFIER .
   59                       | TYPE_SPECIFIER . DECLARATION_SPECIFIERS

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 2
    LONG    shift, and go to state 3
    SHORT   shift, and go to state 4
    FLOAT   shift, and go to state 5

    $default  reduce using rule 58 (DECLARATION_SPECIFIERS)

    DECLARATION_SPECIFIERS  go to state 24
    TYPE_SPECIFIER          go to state 12


State 13

    0 $accept: PROGRAM $end .

    $default  accept


State 14

    4 EXTERNAL_DECLARATION: EXTERNAL_DECLARATION FUNCTION_DEFINITION .

    $default  reduce using rule 4 (EXTERNAL_DECLARATION)


State 15

    6 EXTERNAL_DECLARATION: EXTERNAL_DECLARATION DECLARATION .

    $default  reduce using rule 6 (EXTERNAL_DECLARATION)


State 16

   47 DECLARATOR: T_TIMES . DIRECT_DECLARATOR

    T_LBRACKET  shift, and go to state 17
    T_VARIABLE  shift, and go to state 25

    DIRECT_DECLARATOR  go to state 26


State 17

   51 DIRECT_DECLARATOR: T_LBRACKET . DECLARATOR T_RBRACKET

    T_TIMES     shift, and go to state 16
    T_LBRACKET  shift, and go to state 17
    T_VARIABLE  shift, and go to state 25

    DECLARATOR         go to state 27
    DIRECT_DECLARATOR  go to state 23


State 18

    7 FUNCTION_DEFINITION: DECLARATION_SPECIFIERS T_VARIABLE . T_LBRACKET T_RBRACKET COMPOUND_STATEMENT
    8                    | DECLARATION_SPECIFIERS T_VARIABLE . T_LBRACKET PARAMETERS_LIST T_RBRACKET COMPOUND_STATEMENT
    9                    | DECLARATION_SPECIFIERS T_VARIABLE . T_LBRACKET T_RBRACKET SEMICOLUMN
   10                    | DECLARATION_SPECIFIERS T_VARIABLE . T_LBRACKET PARAMETERS_LIST T_RBRACKET SEMICOLUMN
   50 DIRECT_DECLARATOR: T_VARIABLE .

    T_LBRACKET  shift, and go to state 28

    $default  reduce using rule 50 (DIRECT_DECLARATOR)


State 19

   38 DECLARATION: DECLARATION_SPECIFIERS SEMICOLUMN .

    $default  reduce using rule 38 (DECLARATION)


State 20

   39 DECLARATION: DECLARATION_SPECIFIERS INIT_DECLARATOR_LIST . SEMICOLUMN
   41 INIT_DECLARATOR_LIST: INIT_DECLARATOR_LIST . COMMA INIT_DECLARATOR

    SEMICOLUMN  shift, and go to state 29
    COMMA       shift, and go to state 30


State 21

   40 INIT_DECLARATOR_LIST: INIT_DECLARATOR .

    $default  reduce using rule 40 (INIT_DECLARATOR_LIST)


State 22

   42 INIT_DECLARATOR: DECLARATOR .
   43                | DECLARATOR . EQUAL INITIALIZER

    EQUAL  shift, and go to state 31

    $default  reduce using rule 42 (INIT_DECLARATOR)


State 23

   48 DECLARATOR: DIRECT_DECLARATOR . MIDDLE_RBRACKET T_NUMBER MIDDLE_LBRACKET
   49           | DIRECT_DECLARATOR .
   52 DIRECT_DECLARATOR: DIRECT_DECLARATOR . MIDDLE_LBRACKET MIDDLE_RBRACKET
   53                  | DIRECT_DECLARATOR . MIDDLE_LBRACKET T_NUMBER MIDDLE_RBRACKET

    MIDDLE_RBRACKET  shift, and go to state 32
    MIDDLE_LBRACKET  shift, and go to state 33

    $default  reduce using rule 49 (DECLARATOR)


State 24

   59 DECLARATION_SPECIFIERS: TYPE_SPECIFIER DECLARATION_SPECIFIERS .

    $default  reduce using rule 59 (DECLARATION_SPECIFIERS)


State 25

   50 DIRECT_DECLARATOR: T_VARIABLE .

    $default  reduce using rule 50 (DIRECT_DECLARATOR)


State 26

   47 DECLARATOR: T_TIMES DIRECT_DECLARATOR .
   52 DIRECT_DECLARATOR: DIRECT_DECLARATOR . MIDDLE_LBRACKET MIDDLE_RBRACKET
   53                  | DIRECT_DECLARATOR . MIDDLE_LBRACKET T_NUMBER MIDDLE_RBRACKET

    MIDDLE_LBRACKET  shift, and go to state 33

    $default  reduce using rule 47 (DECLARATOR)


State 27

   51 DIRECT_DECLARATOR: T_LBRACKET DECLARATOR . T_RBRACKET

    T_RBRACKET  shift, and go to state 34


State 28

    7 FUNCTION_DEFINITION: DECLARATION_SPECIFIERS T_VARIABLE T_LBRACKET . T_RBRACKET COMPOUND_STATEMENT
    8                    | DECLARATION_SPECIFIERS T_VARIABLE T_LBRACKET . PARAMETERS_LIST T_RBRACKET COMPOUND_STATEMENT
    9                    | DECLARATION_SPECIFIERS T_VARIABLE T_LBRACKET . T_RBRACKET SEMICOLUMN
   10                    | DECLARATION_SPECIFIERS T_VARIABLE T_LBRACKET . PARAMETERS_LIST T_RBRACKET SEMICOLUMN

    T_RBRACKET  shift, and go to state 35
    INT         shift, and go to state 1
    DOUBLE      shift, and go to state 2
    LONG        shift, and go to state 3
    SHORT       shift, and go to state 4
    FLOAT       shift, and go to state 5

    PARAMETERS_LIST            go to state 36
    PARAMETERS                 go to state 37
    SPECIFIER_QUANTIFIER_LIST  go to state 38
    TYPE_SPECIFIER             go to state 39


State 29

   39 DECLARATION: DECLARATION_SPECIFIERS INIT_DECLARATOR_LIST SEMICOLUMN .

    $default  reduce using rule 39 (DECLARATION)


State 30

   41 INIT_DECLARATOR_LIST: INIT_DECLARATOR_LIST COMMA . INIT_DECLARATOR

    T_TIMES     shift, and go to state 16
    T_LBRACKET  shift, and go to state 17
    T_VARIABLE  shift, and go to state 25

    INIT_DECLARATOR    go to state 40
    DECLARATOR         go to state 22
    DIRECT_DECLARATOR  go to state 23


State 31

   43 INIT_DECLARATOR: DECLARATOR EQUAL . INITIALIZER

    T_PLUS          shift, and go to state 41
    T_MINUS         shift, and go to state 42
    T_LBRACKET      shift, and go to state 43
    T_NUMBER        shift, and go to state 44
    T_VARIABLE      shift, and go to state 45
    INC_OP          shift, and go to state 46
    DEC_OP          shift, and go to state 47
    LARGE_RBRACKET  shift, and go to state 48

    INITIALIZER                     go to state 49
    ASSIGNMENT_EXPRESSION           go to state 50
    CONDITIONAL_EXPRESSION          go to state 51
    LOGICAL_OR_EXPRESSION           go to state 52
    LOGICAL_AND_EXPRESSION          go to state 53
    EQUALITY_EXPRESSION             go to state 54
    BINARY_AND_EXPRESSION           go to state 55
    BINARY_EXCLUSIVE_OR_EXPRESSION  go to state 56
    BINARY_INCLUSIVE_OR_EXPRESSION  go to state 57
    RELATIONAL_EXPRESSION           go to state 58
    ADDITIVE_EXPRESSION             go to state 59
    MULTIPLICATIVE_EXPRESSION       go to state 60
    CAST_EXPRESSION                 go to state 61
    UNARY_EXPRESSION                go to state 62
    UNARY_OPERATOR                  go to state 63
    POSTFIX_EXPRESSION              go to state 64
    PRIMARY_EXPRESSION              go to state 65


State 32

   48 DECLARATOR: DIRECT_DECLARATOR MIDDLE_RBRACKET . T_NUMBER MIDDLE_LBRACKET

    T_NUMBER  shift, and go to state 66


State 33

   52 DIRECT_DECLARATOR: DIRECT_DECLARATOR MIDDLE_LBRACKET . MIDDLE_RBRACKET
   53                  | DIRECT_DECLARATOR MIDDLE_LBRACKET . T_NUMBER MIDDLE_RBRACKET

    T_NUMBER         shift, and go to state 67
    MIDDLE_RBRACKET  shift, and go to state 68


State 34

   51 DIRECT_DECLARATOR: T_LBRACKET DECLARATOR T_RBRACKET .

    $default  reduce using rule 51 (DIRECT_DECLARATOR)


State 35

    7 FUNCTION_DEFINITION: DECLARATION_SPECIFIERS T_VARIABLE T_LBRACKET T_RBRACKET . COMPOUND_STATEMENT
    9                    | DECLARATION_SPECIFIERS T_VARIABLE T_LBRACKET T_RBRACKET . SEMICOLUMN

    SEMICOLUMN      shift, and go to state 69
    LARGE_RBRACKET  shift, and go to state 70

    COMPOUND_STATEMENT  go to state 71


State 36

    8 FUNCTION_DEFINITION: DECLARATION_SPECIFIERS T_VARIABLE T_LBRACKET PARAMETERS_LIST . T_RBRACKET COMPOUND_STATEMENT
   10                    | DECLARATION_SPECIFIERS T_VARIABLE T_LBRACKET PARAMETERS_LIST . T_RBRACKET SEMICOLUMN
   12 PARAMETERS_LIST: PARAMETERS_LIST . COMMA PARAMETERS

    T_RBRACKET  shift, and go to state 72
    COMMA       shift, and go to state 73


State 37

   11 PARAMETERS_LIST: PARAMETERS .

    $default  reduce using rule 11 (PARAMETERS_LIST)


State 38

   13 PARAMETERS: SPECIFIER_QUANTIFIER_LIST . T_VARIABLE
   14           | SPECIFIER_QUANTIFIER_LIST . T_TIMES T_VARIABLE

    T_TIMES     shift, and go to state 74
    T_VARIABLE  shift, and go to state 75


State 39

   15 SPECIFIER_QUANTIFIER_LIST: TYPE_SPECIFIER . SPECIFIER_QUANTIFIER_LIST
   16                          | TYPE_SPECIFIER .

    INT     shift, and go to state 1
    DOUBLE  shift, and go to state 2
    LONG    shift, and go to state 3
    SHORT   shift, and go to state 4
    FLOAT   shift, and go to state 5

    $default  reduce using rule 16 (SPECIFIER_QUANTIFIER_LIST)

    SPECIFIER_QUANTIFIER_LIST  go to state 76
    TYPE_SPECIFIER             go to state 39


State 40

   41 INIT_DECLARATOR_LIST: INIT_DECLARATOR_LIST COMMA INIT_DECLARATOR .

    $default  reduce using rule 41 (INIT_DECLARATOR_LIST)


State 41

  114 UNARY_OPERATOR: T_PLUS .

    $default  reduce using rule 114 (UNARY_OPERATOR)


State 42

  113 UNARY_OPERATOR: T_MINUS .

    $default  reduce using rule 113 (UNARY_OPERATOR)


State 43

  107 CAST_EXPRESSION: T_LBRACKET . TYPE_SPECIFIER T_RBRACKET CAST_EXPRESSION
  125 PRIMARY_EXPRESSION: T_LBRACKET . EXPRESSION T_RBRACKET

    T_PLUS      shift, and go to state 41
    T_MINUS     shift, and go to state 42
    T_LBRACKET  shift, and go to state 43
    T_NUMBER    shift, and go to state 44
    T_VARIABLE  shift, and go to state 45
    INC_OP      shift, and go to state 46
    DEC_OP      shift, and go to state 47
    INT         shift, and go to state 1
    DOUBLE      shift, and go to state 2
    LONG        shift, and go to state 3
    SHORT       shift, and go to state 4
    FLOAT       shift, and go to state 5

    TYPE_SPECIFIER                  go to state 77
    EXPRESSION                      go to state 78
    ASSIGNMENT_EXPRESSION           go to state 79
    CONDITIONAL_EXPRESSION          go to state 51
    LOGICAL_OR_EXPRESSION           go to state 52
    LOGICAL_AND_EXPRESSION          go to state 53
    EQUALITY_EXPRESSION             go to state 54
    BINARY_AND_EXPRESSION           go to state 55
    BINARY_EXCLUSIVE_OR_EXPRESSION  go to state 56
    BINARY_INCLUSIVE_OR_EXPRESSION  go to state 57
    RELATIONAL_EXPRESSION           go to state 58
    ADDITIVE_EXPRESSION             go to state 59
    MULTIPLICATIVE_EXPRESSION       go to state 60
    CAST_EXPRESSION                 go to state 61
    UNARY_EXPRESSION                go to state 62
    UNARY_OPERATOR                  go to state 63
    POSTFIX_EXPRESSION              go to state 64
    PRIMARY_EXPRESSION              go to state 65


State 44

  123 PRIMARY_EXPRESSION: T_NUMBER .

    $default  reduce using rule 123 (PRIMARY_EXPRESSION)


State 45

  124 PRIMARY_EXPRESSION: T_VARIABLE .

    $default  reduce using rule 124 (PRIMARY_EXPRESSION)


State 46

  110 UNARY_EXPRESSION: INC_OP . UNARY_EXPRESSION

    T_PLUS      shift, and go to state 41
    T_MINUS     shift, and go to state 42
    T_LBRACKET  shift, and go to state 80
    T_NUMBER    shift, and go to state 44
    T_VARIABLE  shift, and go to state 45
    INC_OP      shift, and go to state 46
    DEC_OP      shift, and go to state 47

    UNARY_EXPRESSION    go to state 81
    UNARY_OPERATOR      go to state 63
    POSTFIX_EXPRESSION  go to state 82
    PRIMARY_EXPRESSION  go to state 65


State 47

  111 UNARY_EXPRESSION: DEC_OP . UNARY_EXPRESSION

    T_PLUS      shift, and go to state 41
    T_MINUS     shift, and go to state 42
    T_LBRACKET  shift, and go to state 80
    T_NUMBER    shift, and go to state 44
    T_VARIABLE  shift, and go to state 45
    INC_OP      shift, and go to state 46
    DEC_OP      shift, and go to state 47

    UNARY_EXPRESSION    go to state 83
    UNARY_OPERATOR      go to state 63
    POSTFIX_EXPRESSION  go to state 82
    PRIMARY_EXPRESSION  go to state 65


State 48

   45 INITIALIZER: LARGE_RBRACKET . INITIALIZER_LIST LARGE_MBRACKET
   46            | LARGE_RBRACKET . INITIALIZER_LIST COMMA LARGE_MBRACKET

    T_PLUS          shift, and go to state 41
    T_MINUS         shift, and go to state 42
    T_LBRACKET      shift, and go to state 43
    T_NUMBER        shift, and go to state 44
    T_VARIABLE      shift, and go to state 45
    INC_OP          shift, and go to state 46
    DEC_OP          shift, and go to state 47
    LARGE_RBRACKET  shift, and go to state 48
